Fix logo: rename to logo-mirai-dojo.png (no spaces)

--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
             <button class="sync-btn" onclick="syncData()" id="syncBtn">
                 🔄 Sync din Google Sheets
             </button>
-            <img src="Mirai Dojo Logo + JP  CMYK.png" alt="Mirai Dojo Logo" class="header-logo">
+            <img src="logo-mirai-dojo.png" alt="Mirai Dojo Logo" class="header-logo">
         </header>
 
         <!-- Tabs Navigation -->
